# Speech-to-Text

./: README.md  api_keys.py  languages.py  pyproject.toml  speech_to_text.py
audio/: test.m4a
text/: test1.txt  test_actual.txt  test_base.txt  test_large.txt  test_medium.txt  test_small.txt  test_tiny.txt
