[tool.poetry]
name = "poetry-setup"
version = "0.1.0"
description = ""
authors = ["Henrik <henrrb@stud.ntnu.no>"]
readme = "README.md"
packages = [{include = "poetry_setup"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
